--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </div>
     </section>
+    <div class="separator"></div>
     <section class="education">
         <h2>Education</h2>
         <ul class="education--list">
@@ -48,6 +49,7 @@
             </li>
         </ul>
     </section>
+    <div class="separator"></div>
     <section class="work-experience">
         <h2>Work experience</h2>
         <ul class="work-experience--list">
@@ -83,6 +85,7 @@
             </li>
         </ul>
     </section>
+    <div class="separator"></div>
     <section class="skills">
         <h2>Skills</h2>
         <ul class="skills--list">
